{
    "name": "PlayerActionMap",
    "maps": [
        {
            "name": "Movement",
            "id": "1a915606-dc40-4169-a393-79f41b8f9fc7",
            "actions": [
                {
                    "name": "Accelerating",
                    "type": "Value",
                    "id": "24e80ab1-0f7b-44f3-9223-50c47966fc43",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "b2f8bb3d-9fe8-40c8-8e06-5e93168b7c97",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerating",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "ff3e56d3-897a-4172-a858-65c97922019a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerating",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "9719bb95-a5c7-4cf1-9bf3-3ecab75d102e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerating",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Weapons",
            "id": "0b52b3fb-73db-4a12-af56-651c454d78a0",
            "actions": [
                {
                    "name": "ChooseNextWeapon",
                    "type": "Button",
                    "id": "480a6d69-ec84-4723-b91e-5e07f3d5098e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChoosePreviousWeapon",
                    "type": "Button",
                    "id": "75105c75-dac1-4ccb-af09-8bcd9e4e967c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shooting",
                    "type": "Button",
                    "id": "aa9b5a5d-5209-406f-ac39-7e7a365e4a66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eaa666f9-a415-44da-83cf-602261c60a80",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseNextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9804609d-d18b-4183-a79f-47cd11dacc12",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChoosePreviousWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc90bcc6-e3af-4691-9945-967c53eb21cb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Shooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}